# handforge

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  pyproject.toml
.github/workflows/: lint.yml
scripts/: download_models.py  placeholder.py
src/hand_tracker/: __init__.py  __main__.py  capture.py  config.py  landmark_processor.py  logger.py  mediapipe_tracker.py  types.py  utils.py  viewer.py
tests/: test_capture.py  test_config.py  test_landmark_processor.py  test_logger.py  test_mediapipe_tracker.py  test_placeholder.py
tracker/: .env.example  README.md
tracker/scripts/: run_tracker.py
tracker/src/hand_tracker/: cli.py  utils.py
tracker/tests/: test_logger.py
